[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evcs-federate"
version = "0.1.0"
description = "OEDISI EV Charging Station Federate - PSO optimization with linearized voltage estimation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "openEDI", email = "info@openedi.org"}
]
keywords = ["oedisi", "helics", "ev-charging", "pso", "co-simulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "helics>=3.4.0",
    "pydantic",
    "numpy",
    "scipy",
    "fastapi",
    "uvicorn",
    "oedisi @ git+https://github.com/openEDI/oedisi.git@main",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
    "mypy>=0.981",
    "black>=23.0",
    "isort>=5.9",
]

[project.scripts]
evcs-server = "evcs_federate.server:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["evcs_federate*"]
exclude = ["tests*"]
