[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-feeder"
version = "0.1.0"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "openEDI" }]
dependencies = [
    "helics>=3.4.0",
    "fastapi",
    "uvicorn",
    "oedisi~=3.0",
    "pydantic",
    "pyarrow",
    "scipy",
    "matplotlib",
    "numpy",
    "pandas",
    "OpenDSSDirect.py[extras]==0.7.0",
    "boto3",
    "xarray",
    "python-multipart",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pytest-asyncio", "httpx", "mypy", "black", "isort"]

[project.scripts]
feeder-server = "local_feeder.server:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["local_feeder*"]
exclude = ["tests*"]
